--- a/css/footer.css
+++ b/css/footer.css
@@ -8,6 +8,19 @@
     flex-direction: column;
     align-items: center;
 }
+.footer-connect-us{
+    display: inline-block;
+    margin-top: 15px;
+    font-size: 33px;
+    color: #fff;
+    opacity: 0.5;
+    font-family: 'Helvetica Neue Cyr Bold';
+}
+.footer-connect-us:hover{
+    text-decoration: none;
+    color: #fff;
+    opacity: 1;
+}
 @media all and (min-width: 1400px){
     .footer-container {
         width: 1400px;
@@ -16,8 +29,11 @@
 }
 .copyright{
     font-size: 16px;
+    margin-bottom: 15px;
     color:#fff;
     text-align: center;
+    font-family: 'Helvetica Neue Cyr Bold';
+    opacity: 0.5;
 }
 .social-links{
     display: flex;
@@ -25,18 +41,69 @@
     justify-content: center;
     padding-top:15px;
     padding-bottom: 15px;
-    width: 240px;
 }
 .social-links a{
     display: inline-block;
-    width:25%;
+    margin-left: 12px;
+    margin-right: 12px;
+    width: 33px;
+    height: 33px;
 }
-.social-links a img{
-    width:30px;
+
+.twitter-icon{
+    background: url('../img/twitter.png') 100% 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
 }
-@media all and (min-width: 999px){
-    .social-links a{
-        display: inline-block;
-        width:60px;
+.twitter-icon:hover{
+    background: url('../img/twitter-active.png') 100% 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+.telegram-icon{
+  background: url('../img/telegram.png') 100% 100%;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+.telegram-icon:hover{
+    background: url('../img/telegram-active.png') 100% 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+.fb-icon{
+  background: url('../img/fb-icon.png') 100% 100%;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+
+}
+.fb-icon:hover{
+    background: url('../img/facebook-active.png') 100% 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+.youtube-icon{
+  background: url('../img/ytube.png') 100% 100%;
+  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  background-size: cover;
+}
+.youtube-icon:hover{
+    background: url('../img/youtube-active.png') 100% 100%;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    background-size: cover;
+}
+
+@media all and (max-width: 999px){
+
+    .footer-connect-us{
+        display: none;
     }
 }
