--- a/css/header.css
+++ b/css/header.css
@@ -201,12 +201,15 @@
 		height: 100px;
 		width: 100px;
 		align-items: center;
-		justify-content: space-around;
+		justify-content: center;
 		background-color: #000;
 		clear: both;
 		padding: 0;
 		margin: 0;
 		z-index: 2;
+	}
+	.lang-icon{
+		margin-left: 10px;
 	}
 	.header-languages{
 		display: flex;
