--- a/css/home.css
+++ b/css/home.css
@@ -118,7 +118,6 @@ table {
         width: 190px;
         height: 60px;
     }
-
 }
 
 .home-title {
@@ -183,18 +182,25 @@ table {
 @media all and (min-width: 999px) {
 
     .home-title h1 {
-        font-size: 40px;
-        line-height: 40px;
+        font-size: 60px;
+        line-height: 60px;
         text-align: left;
+        
+    }
+    #js-background-renderer{
         margin-top: -40px;
     }
 }
 
-@media all and (min-width: 1300px){
+@media all and (min-width: 1500px){
     .home-title h1 {
-        font-size: 50px;
-        line-height: 50px;
+        font-size: 80px;
+        line-height: 80px;
         text-align: center;
+        margin-top: -40px;
+    }
+    #js-background-renderer{
+        margin-top: -40px;
     }
 }
 
@@ -205,66 +211,114 @@ table {
 .icon-scroll {
     position: absolute;
     width: 40px;
-    bottom: 10%;
+
     height: 70px;
     z-index:5;
 }
 
-.icon-scroll a{
-    padding-top: 80px;
+
+.icon-scroll,
+.icon-scroll:before {
+  position: absolute;
+  left: 50%;
 }
-.icon-scroll a span {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 24px;
-    height: 24px;
-    margin-left: -12px;
-    border-left: 1px solid #000;
-    border-bottom: 1px solid #000;
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    -webkit-animation: sdb 2s infinite;
-    animation: sdb 2s infinite;
+
+.icon-scroll {
+  width: 40px;
+  margin-left: -20px;
+  bottom: 10%;
+  margin-top: -35px;
+  box-shadow: inset 0 0 0 1px #000;
+  border-radius: 25px;
+  height: 70px;
+}
+
+.icon-scroll:before {
+  content: '';
+  width: 8px;
+  height: 8px;
+  background: #000;
+  margin-left: -4px;
+  top: 8px;
+  border-radius: 4px;
+  -webkit-animation-duration: 1.5s;
+  animation-duration: 1.5s;
+  -webkit-animation-iteration-count: infinite;
+  animation-iteration-count: infinite;
+  -webkit-animation-name: scroll;
+  animation-name: scroll;
+}
+
+@-webkit-keyframes scroll {
+  0% {
+    opacity: 1;
+}
+100% {
     opacity: 0;
-    box-sizing: border-box;
+    -webkit-transform: translateY(46px);
+    transform: translateY(46px);
 }
-.icon-scroll a span:nth-of-type(1) {
-    -webkit-animation-delay: 0s;
-    animation-delay: 0s;
 }
-.icon-scroll a span:nth-of-type(2) {
-    top: 16px;
-    -webkit-animation-delay: .15s;
-    animation-delay: .15s;
+
+@keyframes scroll {
+  0% {
+    opacity: 1;
 }
-.icon-scroll span:nth-of-type(3) {
-    top: 32px;
-    -webkit-animation-delay: .3s;
-    animation-delay: .3s;
+100% {
+    opacity: 0;
+    -webkit-transform: translateY(46px);
+    transform: translateY(46px);
 }
-@-webkit-keyframes sdb {
+}
+
+@media only screen and (max-device-width: 768px) {
+  .icon-scroll {
+    height: 80px;
+    border-radius: 4px;
+}
+.icon-scroll:after {
+    content: '';
+    display: block;
+    width: 7px;
+    height: 7px;
+    margin: 1px auto 0 auto;
+    border: 1px solid #000;
+    border-radius: 50%;
+}
+.icon-scroll-screen {
+    position: relative;
+    width: 34px;
+    height: 56px;
+    margin: 10px auto 0;
+    border: 1px solid #000;
+}
+.icon-scroll:before {
+    top: 58px;
+}
+@-webkit-keyframes scroll {
     0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+      -webkit-transform: translateY(-46px);
+      transform: translateY(-46px);
+  }
 }
-@keyframes sdb {
+@keyframes scroll {
     0% {
-        opacity: 0;
-    }
-    50% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+      -webkit-transform: translateY(-46px);
+      transform: translateY(-46px);
+  }
 }
+}
+
+
+
 .section-header {
     padding-left: 10px;
     margin-bottom: 20px;
@@ -363,14 +417,10 @@ table {
 }
 
 .success-ico-color{
-    color: rgba(176, 0, 11, 1);
-    color: -moz-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
-    color: -webkit-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
-    color: -o-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
-    color: -ms-linear-gradient(left, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
-    color: linear-gradient(to right, rgba(176, 0, 11, 1) 0%, rgba(246, 41, 12, 1) 100%);
-    color: -webkit-gradient(left top, right top, color-stop(0%, rgba(176, 0, 11, 1)), color-stop(100%, rgba(246, 41, 12, 1)));
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#b0000b', endColorstr='#f6290c', GradientType=1);
+   background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  color: #f8292d;
 }
 
 @media all and (min-width: 999px) {
@@ -452,15 +502,19 @@ table {
     }
 
     .project-item p {
-        font-size: 90px;
-        height: 90px;
-        line-height: 90px;
+        font-family: 'Helvetica Neue Cyr Bold';
+        font-size: 120px;
+        height: 120px;
+        line-height: 120px;
         text-align: center;
+    }
+    p.partners-number-medium{
+        font-size: 80px;
+        line-height: 70px;
     }
     .partner-number-description{
         font-size: 38px;
         display: block;
-
     }
 }
 
@@ -576,7 +630,7 @@ table {
     width: 51px;
     height: 107px;
     background-repeat: no-repeat;
-     -moz-background-size: 100%; /* Firefox 3.6+ */
+    -moz-background-size: 100%; /* Firefox 3.6+ */
     -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
     -o-background-size: 100%; /* Opera 9.6+ */
     background-size: 100%;
