--- a/css/home.css
+++ b/css/home.css
@@ -18,31 +18,35 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
     display: block;
 }
+
 body {
     background-color: #FAFAFA !important;
 }
+
 ol, ul {
     list-style: none;
 }
+
 blockquote, q {
     quotes: none;
 }
+
 blockquote:before, blockquote:after,
 q:before, q:after {
     content: '';
     content: none;
 }
+
 table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-
-
 
 .cj-container {
     width: 95%;
@@ -155,14 +159,14 @@ table {
     align-items: center;
 }
 
-.home-title-content .cj-container{
+.home-title-content .cj-container {
     display: flex;
     height: inherit;
     flex-direction: column;
     align-items: center;
     position: relative;
     justify-content: center;
-    padding-right:0;
+    padding-right: 0;
 }
 
 .home-title h1 {
@@ -173,33 +177,35 @@ table {
     line-height: 30px;
     text-align: center;
     z-index: 4;
-    -webkit-transition:  all 0.3s;
-    -moz-transition:  all 0.3s;
-    -o-transition:  all 0.3s;
-    transition:  all 0.3s;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 @media all and (min-width: 999px) {
 
     .home-title h1 {
-        font-size: 60px;
+        font-size: 55px;
         line-height: 60px;
         text-align: left;
-        
+
     }
-    #js-background-renderer{
+
+    #js-background-renderer {
         margin-top: -40px;
     }
 }
 
-@media all and (min-width: 1500px){
+@media all and (min-width: 1500px) {
     .home-title h1 {
-        font-size: 80px;
+        font-size: 65px;
         line-height: 80px;
         text-align: center;
         margin-top: -40px;
     }
-    #js-background-renderer{
+
+    #js-background-renderer {
         margin-top: -40px;
     }
 }
@@ -208,116 +214,113 @@ table {
     display: block;
 }
 
-.icon-scroll {
-    position: absolute;
-    width: 40px;
-
-    height: 70px;
-    z-index:5;
-}
-
 
 .icon-scroll,
 .icon-scroll:before {
-  position: absolute;
-  left: 50%;
+    position: absolute;
+    left: 50%;
 }
 
 .icon-scroll {
-  width: 40px;
-  margin-left: -20px;
-  bottom: 10%;
-  margin-top: -35px;
-  box-shadow: inset 0 0 0 1px #000;
-  border-radius: 25px;
-  height: 70px;
+    margin-left: -20px;
+    bottom: 10%;
+    margin-top: -25px;
+    box-shadow: inset 0 0 0 1px #acafb1;
+    border-radius: 25px;
+    width: 24px;
+    height: 39px;
+    position: absolute;
+    z-index: 5;
+    cursor: pointer;
 }
 
 .icon-scroll:before {
-  content: '';
-  width: 8px;
-  height: 8px;
-  background: #000;
-  margin-left: -4px;
-  top: 8px;
-  border-radius: 4px;
-  -webkit-animation-duration: 1.5s;
-  animation-duration: 1.5s;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-name: scroll;
-  animation-name: scroll;
+    content: '';
+    width: 4px;
+    height: 4px;
+    background: #acafb1;
+    margin-left: -2px;
+    top: 6px;
+    border-radius: 4px;
+    -webkit-animation-duration: 1.5s;
+    animation-duration: 1.5s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-name: scroll;
+    animation-name: scroll;
 }
 
 @-webkit-keyframes scroll {
-  0% {
-    opacity: 1;
-}
-100% {
-    opacity: 0;
-    -webkit-transform: translateY(46px);
-    transform: translateY(46px);
-}
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: translateY(23px);
+        transform: translateY(23px);
+    }
 }
 
 @keyframes scroll {
-  0% {
-    opacity: 1;
-}
-100% {
-    opacity: 0;
-    -webkit-transform: translateY(46px);
-    transform: translateY(46px);
-}
+    0% {
+        opacity: 1;
+    }
+    100% {
+        opacity: 0;
+        -webkit-transform: translateY(23px);
+        transform: translateY(23px);
+    }
 }
 
 @media only screen and (max-device-width: 768px) {
-  .icon-scroll {
-    height: 80px;
-    border-radius: 4px;
-}
-.icon-scroll:after {
-    content: '';
-    display: block;
-    width: 7px;
-    height: 7px;
-    margin: 1px auto 0 auto;
-    border: 1px solid #000;
-    border-radius: 50%;
-}
-.icon-scroll-screen {
-    position: relative;
-    width: 34px;
-    height: 56px;
-    margin: 10px auto 0;
-    border: 1px solid #000;
-}
-.icon-scroll:before {
-    top: 58px;
-}
-@-webkit-keyframes scroll {
-    0% {
-      opacity: 1;
-  }
-  100% {
-      opacity: 0;
-      -webkit-transform: translateY(-46px);
-      transform: translateY(-46px);
-  }
-}
-@keyframes scroll {
-    0% {
-      opacity: 1;
-  }
-  100% {
-      opacity: 0;
-      -webkit-transform: translateY(-46px);
-      transform: translateY(-46px);
-  }
-}
-}
+    .icon-scroll {
+        height: 80px;
+        border-radius: 4px;
+    }
 
+    .icon-scroll:after {
+        content: '';
+        display: block;
+        width: 7px;
+        height: 7px;
+        margin: 1px auto 0 auto;
+        border: 1px solid #000;
+        border-radius: 50%;
+    }
 
+    .icon-scroll-screen {
+        position: relative;
+        width: 24px;
+        height: 39px;
+        margin: 10px auto 0;
+        border: 1px solid #000;
+    }
+
+    .icon-scroll:before {
+        top: 58px;
+    }
+
+    @-webkit-keyframes scroll {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+            -webkit-transform: translateY(-46px);
+            transform: translateY(-46px);
+        }
+    }
+    @keyframes scroll {
+        0% {
+            opacity: 1;
+        }
+        100% {
+            opacity: 0;
+            -webkit-transform: translateY(-46px);
+            transform: translateY(-46px);
+        }
+    }
+}
 
 .section-header {
     padding-left: 10px;
@@ -355,14 +358,16 @@ table {
 .about-us-slider {
     position: relative;
 }
-.carousel-item{
+
+.carousel-item {
     overflow: hidden;
 }
 
 .about-us-content {
     padding-top: 15%;
 }
-.about-us-content p{
+
+.about-us-content p {
     font-size: 16px;
     line-height: 26px;
 }
@@ -411,16 +416,17 @@ table {
     line-height: 80px;
     margin-bottom: 0;
 }
-.partner-number-description{
+
+.partner-number-description {
     font-size: 16px;
     padding-left: 5px;
 }
 
-.success-ico-color{
-   background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  color: #f8292d;
+.success-ico-color {
+    background: linear-gradient(90deg, #b0010b 50%, #b0010b 50%, #f8292d);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: #f8292d;
 }
 
 @media all and (min-width: 999px) {
@@ -441,7 +447,8 @@ table {
 .home-news .cj-container {
     padding-bottom: 80px;
 }
-.home-partners .cj-container{
+
+.home-partners .cj-container {
     padding-bottom: 80px;
 }
 
@@ -450,6 +457,7 @@ table {
     .home-projects .section-header {
         margin-bottom: 60px;
     }
+
     .home-partners .section-header {
         margin-left: 5%;
         margin-bottom: 60px;
@@ -463,7 +471,7 @@ table {
         padding-bottom: 180px;
     }
 
-    .home-partners .cj-container{
+    .home-partners .cj-container {
         padding-bottom: 180px;
     }
 
@@ -508,11 +516,13 @@ table {
         line-height: 120px;
         text-align: center;
     }
-    p.partners-number-medium{
+
+    p.partners-number-medium {
         font-size: 80px;
         line-height: 70px;
     }
-    .partner-number-description{
+
+    .partner-number-description {
         font-size: 38px;
         display: block;
     }
@@ -530,10 +540,12 @@ table {
     display: flex;
     justify-content: center;
 }
-.news-category-label{
+
+.news-category-label {
     height: 36px;
     width: 40%;
 }
+
 .news-category-label span {
     display: inline-block;
     width: 100px;
@@ -563,14 +575,13 @@ table {
     margin-bottom: 0;
 }
 
-
-
 @media all and (min-width: 720px) {
-    .news-items{
+    .news-items {
         width: 93%;
         margin-right: 7%;
         padding-bottom: 60px;
     }
+
     .news-item {
         flex-direction: row;
     }
@@ -579,17 +590,20 @@ table {
         width: 35%;
         align-items: center;
     }
-    .news-category-label{
+
+    .news-category-label {
         width: 50%;
         justify-content: start;
     }
+
     .news-category-label, .news-title, .news-date {
 
         display: flex;
         align-items: center;
         font-size: 15px;
     }
-    .news-category-label span{
+
+    .news-category-label span {
         font-size: 13px;
     }
 
@@ -604,12 +618,10 @@ table {
 
 }
 
-
-
-
 .home-partners .cj-container {
     padding-left: 0;
 }
+
 .home-partners .section-header {
     margin-left: 5%;
 }
@@ -625,8 +637,9 @@ table {
     width: 10%;
     margin: 5%;
 }
+
 .partners-next,
-.partners-prev{
+.partners-prev {
     width: 51px;
     height: 107px;
     background-repeat: no-repeat;
@@ -637,23 +650,25 @@ table {
     cursor: pointer;
 }
 
-.partners-prev{
+.partners-prev {
     background: url("../img/partners-prev.png");
     opacity: 0.1;
 }
-.partners-prev:hover{
-   background: url("../img/partners-prev.png");
-   opacity: 0.4;
+
+.partners-prev:hover {
+    background: url("../img/partners-prev.png");
+    opacity: 0.4;
 }
-.partners-next{
- background: url("../img/partners-next.png");
- opacity: 0.1;
+
+.partners-next {
+    background: url("../img/partners-next.png");
+    opacity: 0.1;
 }
-.partners-next:hover{
+
+.partners-next:hover {
     background: url("../img/partners-next.png");
     opacity: 0.5;
 }
-
 
 .owl-carousel {
     width: 60%;
