--- a/css/home.css
+++ b/css/home.css
@@ -145,7 +145,7 @@ table {
 }
 
 #js-background-renderer {
-    height: 400px;
+    height: 380px;
     width: 100%;
 }
 
@@ -187,26 +187,26 @@ table {
 
     .home-title h1 {
         font-size: 55px;
-        line-height: 60px;
+        line-height: 56px;
         text-align: left;
 
     }
 
     #js-background-renderer {
-        margin-top: -40px;
+        margin-top: -60px;
     }
 }
 
 @media all and (min-width: 1500px) {
     .home-title h1 {
-        font-size: 65px;
-        line-height: 80px;
+        font-size: 60px;
+        line-height: 61px;
         text-align: center;
         margin-top: -40px;
     }
 
     #js-background-renderer {
-        margin-top: -40px;
+        margin-top: -60px;
     }
 }
 
@@ -504,16 +504,16 @@ table {
     }
 
     .project-item h3 {
-        font-size: 17px;
+        font-size: 20px;
         text-align: center;
         height: 100px;
     }
 
     .project-item p {
         font-family: 'Helvetica Neue Cyr Bold';
-        font-size: 120px;
+        font-size: 80px;
         height: 120px;
-        line-height: 120px;
+        line-height: 70px;
         text-align: center;
     }
 
@@ -629,13 +629,12 @@ table {
 .partners-carousel-container {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .partners-next-container,
 .partners-prev-container {
     width: 10%;
-    margin: 5%;
 }
 
 .partners-next,
@@ -684,15 +683,17 @@ table {
 
 .partner-item img {
     display: inline-block;
-    width: 270px;
+    width: 240px;
 }
 
 @media all and (min-width: 999px) {
     .partners-next-container,
     .partners-prev-container {
         width: 5%;
-        margin: 5%;
     }
+
+
+
 
     .partners-next-container img,
     .partners-prev-container img {
@@ -713,7 +714,7 @@ table {
     }
 
     .partner-item img {
-        width: 250px !important;
+        width: 225px !important;
         text-align: center;
     }
 }
