--- a/css/home.css
+++ b/css/home.css
@@ -189,11 +189,7 @@ table {
         font-size: 55px;
         line-height: 56px;
         text-align: left;
-
-    }
-
-    #js-background-renderer {
-        margin-top: -60px;
+        margin-top: 10%;
     }
 }
 
@@ -202,18 +198,13 @@ table {
         font-size: 60px;
         line-height: 61px;
         text-align: center;
-        margin-top: -40px;
-    }
-
-    #js-background-renderer {
-        margin-top: -60px;
+        margin-top: 10%;
     }
 }
 
 .home-title h1 span {
     display: block;
 }
-
 
 .icon-scroll,
 .icon-scroll:before {
@@ -274,8 +265,9 @@ table {
 
 @media only screen and (max-device-width: 768px) {
     .icon-scroll {
-        height: 80px;
+        height: 60px;
         border-radius: 4px;
+        width: 28px;
     }
 
     .icon-scroll:after {
@@ -297,7 +289,7 @@ table {
     }
 
     .icon-scroll:before {
-        top: 58px;
+        top: 48px;
     }
 
     @-webkit-keyframes scroll {
@@ -365,6 +357,7 @@ table {
 
 .about-us-content {
     padding-top: 15%;
+    padding-right: 13%;
 }
 
 .about-us-content p {
@@ -504,14 +497,14 @@ table {
     }
 
     .project-item h3 {
-        font-size: 20px;
+        font-size: 17px;
         text-align: center;
         height: 100px;
     }
 
     .project-item p {
         font-family: 'Helvetica Neue Cyr Bold';
-        font-size: 80px;
+        font-size: 100px;
         height: 120px;
         line-height: 70px;
         text-align: center;
